Validate Email Before Regis

--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,15 @@ footer{
     font-style: italic;
     color: #96a2a7;
   }
+
+  /* hide arrow number input */
+  input[type=number]::-webkit-inner-spin-button, 
+  input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+  }
+  input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
+  }
