--- a/css/style.css
+++ b/css/style.css
@@ -227,3 +227,19 @@ footer{
   width: 70%;
   height: auto;
 }
+
+.modal-dialog {
+  height: 80% !important;
+  padding-top:15%;
+}
+.modal-content {
+  height: 100% !important;
+  overflow:visible;
+}
+.modal-body {
+  height: 80%;
+  overflow: auto;
+}
+.modal-text{
+  color: red;
+}
